welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: value methodeAppeleeParLeCompilateur
methodeAppeleeParLeCompilateur() // tout ceci est ignoré
^Source:3: error: not found: value autreAppel
autreAppel() /* Ceci est
^Source:6: error: not found: value encoreUneAutreAppel
encoreUneAutreAppel() 
^